# docs/swagger.yaml
@@ -16,22 +16,22 @@ definitions:
       password:
         type: string
     required:
-      - confirm
-      - password
+    - confirm
+    - password
     type: object
   req.ReqBookmark:
     properties:
       post:
         type: string
     required:
-      - post
+    - post
     type: object
   req.ReqEmail:
     properties:
       email:
         type: string
     required:
-      - email
+    - email
     type: object
   req.ReqSignIn:
     properties:
@@ -40,8 +40,8 @@ definitions:
       password:
         type: string
     required:
-      - email
-      - password
+    - email
+    - password
     type: object
   req.ReqSignUp:
     properties:
@@ -52,9 +52,9 @@ definitions:
       password:
         type: string
     required:
-      - email
-      - full_name
-      - password
+    - email
+    - full_name
+    - password
     type: object
   req.ReqUpdateUser:
     properties:
@@ -76,38 +76,21 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
-  title: Tech Posts Trending API
+  title: Deviread API
   version: "1.0"
 paths:
   /posts:
     get:
       consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Get all posts trending
-      tags:
-        - post-service
-    post:
-      consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: tags of posts
-          in: query
-          name: tags
-          required: true
-          type: string
+      - description: tag of posts
+        in: query
+        name: tag
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -119,20 +102,38 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Search post by tag
       tags:
-        - post-service
+      - post-service
+  /trend:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: Get all posts trending
+      tags:
+      - post-service
   /user/bookmark/add:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqBookmark'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqBookmark'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -156,20 +157,20 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Add bookmark
       tags:
-        - bookmark-service
+      - bookmark-service
   /user/bookmark/delete:
     delete:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqBookmark'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqBookmark'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -189,13 +190,13 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Delete bookmark
       tags:
-        - bookmark-service
+      - bookmark-service
   /user/bookmark/list:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -207,20 +208,20 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Get list bookmark
       tags:
-        - bookmark-service
+      - bookmark-service
   /user/password/forgot:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqEmail'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqEmail'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -240,25 +241,25 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Forgot password
       tags:
-        - user-service
+      - user-service
   /user/password/reset:
     put:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.PasswordSubmit'
-        - description: token reset password
-          in: query
-          name: token
-          required: true
-          type: string
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.PasswordSubmit'
+      - description: token reset password
+        in: query
+        name: token
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -277,16 +278,16 @@ paths:
           schema:
             $ref: '#/definitions/model.Response'
       security:
-        - token-reset-password: [ ]
+      - token-reset-password: []
       summary: Reset password
       tags:
-        - user-service
+      - user-service
   /user/profile:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -310,20 +311,20 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Get user profile
       tags:
-        - profile-service
+      - profile-service
   /user/profile/update:
     put:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqUpdateUser'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqUpdateUser'
       produces:
-        - application/json
+      - application/json
       responses:
         "201":
           description: Created
@@ -343,42 +344,20 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Update user profile
       tags:
-        - profile-service
-  /user/refresh:
-    post:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/model.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.Response'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Refresh token
-      tags:
-        - user-service
+      - profile-service
   /user/sign-in:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqSignIn'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqSignIn'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -402,38 +381,20 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Sign in to access your account
       tags:
-        - user-service
-  /user/sign-out:
-    post:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Response'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Sign out user profile
-      tags:
-        - profile-service
+      - user-service
   /user/sign-up:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.ReqSignUp'
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.ReqSignUp'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -457,25 +418,25 @@ paths:
             $ref: '#/definitions/model.Response'
       summary: Create new account
       tags:
-        - user-service
+      - user-service
   /user/verify:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: user
-          in: body
-          name: data
-          required: true
-          schema:
-            $ref: '#/definitions/req.PasswordSubmit'
-        - description: token verify email
-          in: query
-          name: token
-          required: true
-          type: string
+      - description: user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/req.PasswordSubmit'
+      - description: token verify email
+        in: query
+        name: token
+        required: true
+        type: string
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -494,8 +455,13 @@ paths:
           schema:
             $ref: '#/definitions/model.Response'
       security:
-        - token-verify-account: [ ]
+      - token-verify-account: []
       summary: Verify email
       tags:
-        - user-service
+      - user-service
+securityDefinitions:
+  jwt:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
