# handler/user_handler.go
@@ -1,6 +1,9 @@
 package handler
 
 import (
+	"github.com/dgrijalva/jwt-go"
+	"github.com/google/uuid"
+	"github.com/labstack/echo/v4"
 	"net/http"
 	"net/smtp"
 	"os"
@@ -10,10 +13,6 @@ import (
 	"tech_posts_trending/model/req"
 	"tech_posts_trending/repository"
 	"tech_posts_trending/security"
-	"time"
-
-	"github.com/google/uuid"
-	"github.com/labstack/echo/v4"
 )
 
 type smtpServer struct {
@@ -28,7 +27,7 @@ func (s *smtpServer) Address() string {
 
 type UserHandler struct {
 	UserRepo repository.UserRepo
-	AuthRepo repository.AuthRepo
+	AuthRepo repository.AuthenRepo
 }
 
 // SignUp godoc
@@ -88,12 +87,17 @@ func (u *UserHandler) SignUp(c echo.Context) error {
 			Message:    err.Error(),
 		})
 	}
+	return c.JSON(http.StatusOK, model.Response{
+		StatusCode: http.StatusOK,
+		Message:    "Xử lý thành công",
+	})
+
 
 	// verify email
 	token := security.CreateTokenHash(user.Email)
 
 	// save token to redis
-	saveErr := u.AuthRepo.CreateAuthMail(token, user.UserID)
+	saveErr := u.AuthRepo.CreateTokenMail(token, user.UserID)
 	if saveErr != nil {
 		return c.JSON(http.StatusForbidden, model.Response{
 			StatusCode: http.StatusForbidden,
@@ -171,7 +175,7 @@ func (u *UserHandler) ForgotPassword(c echo.Context) error {
 	token := security.CreateTokenHash(user.Email)
 
 	// save token to redis
-	saveErr := u.AuthRepo.CreateAuthMail(token, user.UserID)
+	saveErr := u.AuthRepo.CreateTokenMail(token, user.UserID)
 	if saveErr != nil {
 		return c.JSON(http.StatusForbidden, model.Response{
 			StatusCode: http.StatusForbidden,
@@ -179,7 +183,7 @@ func (u *UserHandler) ForgotPassword(c echo.Context) error {
 		})
 	}
 
-	insertErr := u.AuthRepo.InsertAuthMail(token)
+	insertErr := u.AuthRepo.InsertTokenMail(token)
 	if insertErr != nil {
 		return c.JSON(http.StatusForbidden, model.Response{
 			StatusCode: http.StatusForbidden,
@@ -248,7 +252,7 @@ func (u *UserHandler) VerifyAccount(c echo.Context) error {
 
 	token := security.ExtractTokenMail(c.Request())
 
-	userID, err := u.AuthRepo.FetchAuthMail(token)
+	userID, err := u.AuthRepo.FetchTokenMail(token)
 	if err != nil {
 		return c.JSON(http.StatusUnauthorized, model.Response{
 			StatusCode: http.StatusUnauthorized,
@@ -342,7 +346,7 @@ func (u *UserHandler) ResetPassword(c echo.Context) error {
 
 	token := security.ExtractTokenMail(c.Request())
 
-	userID, err := u.AuthRepo.FetchAuthMail(token)
+	userID, err := u.AuthRepo.FetchTokenMail(token)
 	if err != nil {
 		return c.JSON(http.StatusUnauthorized, model.Response{
 			StatusCode: http.StatusUnauthorized,
@@ -443,7 +447,7 @@ func (u *UserHandler) SignIn(c echo.Context) error {
 	}
 
 	// create token
-	token, err := security.CreateToken(user.UserID)
+	token, err := security.CreateToken(user)
 	if err != nil {
 		log.Error(err.Error())
 		return c.JSON(http.StatusForbidden, model.Response{
@@ -451,38 +455,7 @@ func (u *UserHandler) SignIn(c echo.Context) error {
 			Message:    err.Error(),
 		})
 	}
-
-	saveErr := u.AuthRepo.CreateAuth(user.UserID, token)
-	if saveErr != nil {
-		return c.JSON(http.StatusForbidden, model.Response{
-			StatusCode: http.StatusForbidden,
-			Message:    saveErr.Error(),
-		})
-	}
-
-	user.AccessToken = token.AccessToken
-	user.RefreshToken = token.RefreshToken
-
-	// create cookie for client(browser)
-	atCookie := &http.Cookie{
-		Name:     "access_token",
-		Value:    token.AccessToken,
-		HttpOnly: true,
-		//Secure: true,
-		SameSite: 2,
-		Expires:  time.Now().Add(time.Minute * 15),
-	}
-	c.SetCookie(atCookie)
-
-	rtCookie := &http.Cookie{
-		Name:     "refresh_token",
-		Value:    token.RefreshToken,
-		SameSite: 2,
-		HttpOnly: true,
-		//Secure: true,
-		Expires: time.Now().Add(time.Hour * 24),
-	}
-	c.SetCookie(rtCookie)
+	user.Token = token
 
 	return c.JSON(http.StatusOK, model.Response{
 		StatusCode: http.StatusOK,
@@ -503,24 +476,10 @@ func (u *UserHandler) SignIn(c echo.Context) error {
 // @Failure 500 {object} model.Response
 // @Router /user/profile [get]
 func (u *UserHandler) Profile(c echo.Context) error {
-	tokenAuth, err := security.ExtractAccessTokenMetadata(c.Request())
-	if err != nil {
-		log.Error(err.Error())
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    err.Error(),
-		})
-	}
+	tokenData := c.Get("user").(*jwt.Token)
+	claims := tokenData.Claims.(*model.TokenDetails)
 
-	userID, err := u.AuthRepo.FetchAuth(tokenAuth.AccessUUID)
-	if err != nil {
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    "Truy cập không được phép",
-		})
-	}
-
-	user, err := u.UserRepo.SelectUserByID(c.Request().Context(), userID)
+	user, err := u.UserRepo.SelectUserByID(c.Request().Context(), claims.UserID)
 	if err != nil {
 		log.Error(err.Error())
 		if err == custom_error.UserNotFound {
@@ -572,22 +531,8 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 		})
 	}
 
-	tokenAuth, err := security.ExtractAccessTokenMetadata(c.Request())
-	if err != nil {
-		log.Error(err.Error())
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    err.Error(),
-		})
-	}
-
-	userID, err := u.AuthRepo.FetchAuth(tokenAuth.AccessUUID)
-	if err != nil {
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    "Truy cập không được phép",
-		})
-	}
+	token := c.Get("user").(*jwt.Token)
+	claims := token.Claims.(*model.TokenDetails)
 
 	if request.Password != request.Confirm {
 		return c.JSON(http.StatusUnauthorized, model.Response{
@@ -598,6 +543,7 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 
 	hash := security.HashAndSalt([]byte(request.Password))
 
+	var err error
 	if request.FullName == "" {
 		if len(request.Password) < 8 {
 			return c.JSON(http.StatusBadRequest, model.Response{
@@ -606,7 +552,7 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 			})
 		}
 		user := model.User{
-			UserID:   userID,
+			UserID:   claims.UserID,
 			Password: hash,
 		}
 
@@ -622,7 +568,7 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 
 	if request.Password == "" {
 		user := model.User{
-			UserID:   userID,
+			UserID:   claims.UserID,
 			FullName: request.FullName,
 		}
 
@@ -637,7 +583,7 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 	}
 
 	user := model.User{
-		UserID:   userID,
+		UserID:   claims.UserID,
 		FullName: request.FullName,
 		Password: hash,
 	}
@@ -654,142 +600,5 @@ func (u *UserHandler) UpdateProfile(c echo.Context) error {
 	return c.JSON(http.StatusCreated, model.Response{
 		StatusCode: http.StatusCreated,
 		Message:    "Cập nhật thông tin thành công",
-	})
-}
-
-// SignOut godoc
-// @Summary Sign out user profile
-// @Tags profile-service
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} model.Response
-// @Failure 401 {object} model.Response
-// @Router /user/sign-out [post]
-func (u *UserHandler) SignOut(c echo.Context) error {
-	extractAt, err := security.ExtractAccessTokenMetadata(c.Request())
-	if err != nil {
-		log.Error(err.Error())
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    err.Error(),
-		})
-	}
-
-	deleteAtErr := u.AuthRepo.DeleteAccessToken(extractAt.AccessUUID)
-	if deleteAtErr != nil {
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    deleteAtErr.Error(),
-		})
-	}
-
-	extractRt, err := security.ExtractRefreshTokenMetadata(c.Request())
-	if err != nil {
-		log.Error(err.Error())
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    err.Error(),
-		})
-	}
-
-	deleteRtErr := u.AuthRepo.DeleteRefreshToken(extractRt.RefreshUUID)
-	if deleteRtErr != nil {
-		return c.JSON(http.StatusUnauthorized, model.Response{
-			StatusCode: http.StatusUnauthorized,
-			Message:    deleteRtErr.Error(),
-		})
-	}
-
-	atCookie := &http.Cookie{
-		Name:   "access_token",
-		MaxAge: -1,
-	}
-	c.SetCookie(atCookie)
-
-	rtCookie := &http.Cookie{
-		Name:   "refresh_token",
-		MaxAge: -1,
-	}
-	c.SetCookie(rtCookie)
-
-	return c.JSON(http.StatusOK, model.Response{
-		StatusCode: http.StatusOK,
-		Message:    "Đăng xuất thành công",
-	})
-}
-
-// Refresh godoc
-// @Summary Refresh token
-// @Tags user-service
-// @Accept  json
-// @Produce  json
-// @Success 201 {object} model.Response
-// @Failure 401 {object} model.Response
-// @Failure 403 {object} model.Response
-// @Router /user/refresh [post]
-func (u *UserHandler) Refresh(c echo.Context) error {
-	_, err := c.Cookie("access_token")
-	if err != nil {
-		extractRt, err := security.ExtractRefreshTokenMetadata(c.Request())
-		if err != nil {
-			return c.JSON(http.StatusUnauthorized, model.Response{
-				StatusCode: http.StatusUnauthorized,
-				Message:    "Bạn cần phải đăng nhập",
-			})
-		}
-
-		deleteErr := u.AuthRepo.DeleteRefreshToken(extractRt.RefreshUUID)
-		if deleteErr != nil {
-			return c.JSON(http.StatusUnauthorized, model.Response{
-				StatusCode: http.StatusUnauthorized,
-				Message:    deleteErr.Error(),
-			})
-		}
-
-		token, createErr := security.CreateToken(extractRt.UserID)
-		if createErr != nil {
-			return c.JSON(http.StatusForbidden, model.Response{
-				StatusCode: http.StatusForbidden,
-				Message:    createErr.Error(),
-			})
-		}
-
-		saveErr := u.AuthRepo.CreateAuth(extractRt.UserID, token)
-		if saveErr != nil {
-			return c.JSON(http.StatusForbidden, model.Response{
-				StatusCode: http.StatusForbidden,
-				Message:    saveErr.Error(),
-			})
-		}
-
-		atCookie := &http.Cookie{
-			Name:     "access_token",
-			Value:    token.AccessToken,
-			HttpOnly: true,
-			//Secure: true,
-			SameSite: 2,
-			Expires:  time.Now().Add(time.Minute * 15),
-		}
-		c.SetCookie(atCookie)
-
-		rtCookie := &http.Cookie{
-			Name:     "refresh_token",
-			Value:    token.RefreshToken,
-			SameSite: 2,
-			HttpOnly: true,
-			//Secure: true,
-			Expires: time.Now().Add(time.Hour * 24),
-		}
-		c.SetCookie(rtCookie)
-
-		return c.JSON(http.StatusCreated, model.Response{
-			StatusCode: http.StatusCreated,
-			Message:    "Xử lý thành công",
-		})
-	}
-
-	return c.JSON(http.StatusUnauthorized, model.Response{
-		StatusCode: http.StatusUnauthorized,
-		Message:    "Access token chưa hết hạn",
 	})
 }
